--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li>
+						<li>&copy; Alex Weimer</li>
 					</ul>
 
 			</footer>
